--- a/src/scss/Layout.scss
+++ b/src/scss/Layout.scss
@@ -312,8 +312,11 @@ p {
   background-color: transparent;
   border: 0;
   padding: 0;
-
   outline: none;
+
+  &:hover {
+    // text-decoration: underline;
+  }
 }
 
 .tooltip {
