--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -1,15 +1,12 @@
-@import "~bootstrap/scss/_functions.scss";
-@import "~bootstrap/scss/_variables.scss";
-@import "~bootstrap/scss/_mixins.scss";
-@import "~bootstrap/scss/_root.scss";
-@import "~bootstrap/scss/_reboot.scss";
-@import "~bootstrap/scss/_type.scss";
-@import "~bootstrap/scss/_grid.scss";
-@import "~bootstrap/scss/_transitions.scss";
-@import "~bootstrap/scss/_dropdown.scss";
-@import "~bootstrap/scss/_nav.scss";
-@import "~bootstrap/scss/_navbar.scss";
-@import "~bootstrap/scss/_card.scss";
-@import "~bootstrap/scss/_badge.scss";
-@import "~bootstrap/scss/_utilities.scss";
-@import "~bootstrap/scss/_print.scss";
+@import '~bootstrap/scss/bootstrap-utilities.scss';
+@import '~bootstrap/scss/root';
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/type';
+@import '~bootstrap/scss/_grid.scss';
+@import '~bootstrap/scss/_transitions.scss';
+@import '~bootstrap/scss/_dropdown.scss';
+@import '~bootstrap/scss/_nav.scss';
+@import '~bootstrap/scss/_navbar.scss';
+@import '~bootstrap/scss/_card.scss';
+@import '~bootstrap/scss/_badge.scss';
+@import '~bootstrap/scss/_utilities.scss';
